--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Looking for DanielBPC? we got ya</title>
+  <meta name="description" content="Hey this is my site, please employ me.">
+  <meta property="og:title" content="Daniel's Website, done during le wagon">
+  <meta property="og:image" content="images/Profile_400x400.jpg">
+  <meta property="og:description" content="Hey this is my site, please employ me..">
+  <meta property="og:site_name" content="Danielbpc"/>
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@danielbpc">
+  <meta name="twitter:title" content="Daniel's Website, done during le wagon">
+  <meta name="twitter:description" content="Hey this is my site, please employ me...">
+
+  <meta name="twitter:creator" content="@danielbpc">
+  <meta name="twitter:image:src" content="images/Profile_400x400.jpg">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lilita+One|Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
