--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Looking for DanielBPC? we got ya</title>
+  <link rel="shortcut icon" type="image/png" href="images/avatar_04c88c7d36ba_128.png"/>
   <meta name="description" content="Hey this is my site, please employ me.">
   <meta property="og:title" content="Daniel's Website, done during le wagon">
   <meta property="og:image" content="images/Profile_400x400.jpg">
@@ -12,9 +13,9 @@
   <meta name="twitter:site" content="@danielbpc">
   <meta name="twitter:title" content="Daniel's Website, done during le wagon">
   <meta name="twitter:description" content="Hey this is my site, please employ me...">
-
   <meta name="twitter:creator" content="@danielbpc">
   <meta name="twitter:image:src" content="images/Profile_400x400.jpg">
+
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lilita+One|Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
