--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <div id="sidebar">
     <ul class="no_padding">
       <li>
-        <a href="#header">Info</a>
+        <a href="#header"><i class="fas fa-home"></i> Top</a>
       </li>
       <li>
-        <a href="#skills">Skills</a>
+        <a href="#skills"><i class="far fa-clipboard"></i> Skills</a>
       </li>
     </ul>
   </div>
