better stuff flex

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 		</ul>
 	</div>
 	<div class="container">
-		<div class="cards" id="header">
+		<div id="header">
 			<img src="images/Profile_400x400.jpg" alt="Sup?" id="profile">
 			<h1>Daniel B.P. Carvalho</h1>
 			<h2>Lawyer/<code>Ruby</code> programmer.</h2>
 			<p>Hey during my life I've always as a hobby played around the graphic design area, life made me go through law school, and successfully pass the OAB turning me officially a lawyer, but I'm now changing my carreer from lawyer to developer!</p>
+      <a href="#" class="btn-mine">Hey I made this button.</a>
 		</div>
 		<div>
 			<ul class="list-inline" id="info">
@@ -47,23 +48,34 @@
 			</ul>
 		</div>
 		<div class="cards" id="skills">
-			<table>
-				<tr>
-					<td><img src="images/Adobe_Photoshop_CC_icon.svg" alt="" class="card_images"></td>
-					<td><h2>Adobe Photoshop</h2><p>I've been using this software to edit images and illustrate for more than 10 years.</p></td>
-				</tr>
-				<tr>
-					<td><img src="images/adobe-after-effects-logo.png" alt="" class="card_images"></td>
-					<td><h2>Adobe After Effects</h2><p>Using this with Premiere I can do mostly anything I want editing videos.</p></td>
-				</tr>
-				<tr>
-					<td><img src="images/Ruby_logo.svg" alt="" class="card_images"></td>
-					<td><h2>Ruby</h2><p>Right now I only know how to program in ruby!.</p></td>
-				</tr>
-			</table>
-		</div>
+<ul>
+  <li>
+    <div class="card">
+        <img src="images/Adobe_Photoshop_CC_icon.svg" alt="" class="card_images">
+        <div class="card-body">
+          <h2>Adobe Photoshop</h2><p>I've been using this software to edit images and illustrate for more than 10 years.</p>
+        </div>
+      </div>
+  </li>
+    <li>
+        <div class="card">
+        <img src="images/adobe-after-effects-logo.png" alt="" class="card_images">
+        <div class="card-body">
+          <h2>Adobe After Effects</h2><p>Using this with Premiere I can do mostly anything I want editing videos.</p>
+        </div>
+      </div>
+    </li>
+      <li>
+        <div class="card">
+          <img src="images/Ruby_logo.svg" alt="" class="card_images">
+          <div class="card-body">
+            <h2>Ruby</h2><p>Right now I only know how to program in ruby!.</p>
+          </div>
+        </div>
+      </li>
+</ul>
+    </div>
 	</div>
 	<img src="images/tumblr_static_animated-daniel-twtter.gif" alt="">
 </body>
 </html>
-
